tests/parser/validinput/doubleimplication.idp
vocabulary V {
	type x
	P(x)
}

theory T:V{
	!x: P(x) => P(x) => P(x).
}

procedure main(){
	return 1
}
